--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 
+*{
+    max-height: 10000px;
+    max-width: 10000px;
+}
 body {
     height: 100%;
     width: 100%;
     margin:0;
     box-sizing: border-box;
     padding: 0 ;
+    flex-wrap: wrap;
 
 }
 
@@ -32,6 +37,21 @@ body {
     font-size: 35px;
     font-weight: 900;
     color: #f9faf8;
+}
+
+.logo-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+.line {
+    background-color: white;
+    height: 8px;
+    width: 170px;
+    border-radius: 20px;
+    margin: 0;
 }
 
 ul {
@@ -220,4 +240,11 @@ button {
     justify-content: center;
     align-items: center;
     padding: 15px;
+}
+
+a {
+    text-decoration: none;
+    color: #3882f6;
+    font-style: italic;
+    font-weight: bold;
 }
